QPID-8221: patch from Chen Wan to add connection timeout to client