src/qpid/client/amqp0_10/ConnectionImpl.cpp
@@ -193,6 +193,8 @@ void ConnectionImpl::setOption(const std::string& name, const Variant& value)
         disableAutoDecode = value;
     } else if (name == "virtualhost") {
         settings.virtualhost = value.asString();
+    } else if (name == "connect-timeout" || name == "connect_timeout") {
+        settings.connectTimeout = value; 
     } else {
         throw qpid::messaging::MessagingException(QPID_MSG("Invalid option: " << name << " not recognised"));
     }
